<resources>
    <string name="app_name">Wishlist Buddy</string>
    <string name="landing_page_message">To create wishlist with the group, permission to access contact is required.</string>
    <string name="give_contact_access">Give contact access</string>
    <string name="fab_btn_new_group">New Group</string>
    <string name="et_search">Search</string>
    <string name="btn_create">Create</string>
    <string name="group_name">Group Name</string>
    <string name="your_name">Your Name</string>
    <string name="your_mobile_number">Your Mobile Number with Country Code</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_a_member">"Already a member?  "</string>
    <string name="new_member">"New Member?  "</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="save">Save</string>
    <string name="empty_space">  </string>
    <string name="fab_add_wish">Add Wish</string>
    <string name="add_your_wish">Add Your Wish</string>
    <string name="btn_add">Add</string>
    <string name="resend_code_message">Resend code in %1$s sec</string>
    <string name="resending_code">Resending code..</string>
    <string name="retry_after_time">Retry after sometime</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="app_logo">logo</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="btn_ok">Ok</string>
</resources>