<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="authViewModel"
            type="com.vedantbhavsar1997.wishlist.buddy.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.AuthActivity">

        <ImageView
            android:id="@+id/ivLogo"
            android:scaleType="fitXY"
            android:src="@drawable/play_store_1024"
            android:contentDescription="@string/app_logo"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvAppName"
            app:layout_constraintHeight_max="240dp"
            app:layout_constraintWidth_max="240dp"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tvAppName"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="24sp"
            android:visibility="visible"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/llAuthContainer"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/llAuthContainer"
            android:orientation="vertical"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvConfirmDetails"
                android:text="@string/confirm_details"
                android:textStyle="italic"
                android:textSize="20sp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlName"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:hint="@string/your_name"
                    android:inputType="textCapWords"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlNumber"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumber"
                    android:hint="@string/your_mobile_number"
                    android:inputType="textPhonetic"
                    android:digits="+1234567890"
                    android:drawableStart="@drawable/baseline_phone_android_24"
                    android:drawablePadding="8dp"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlEmail"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="8dp"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlPassword"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/baseline_lock_outline_24"
                    android:drawablePadding="8dp"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlConfirmPassword"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/baseline_lock_outline_24"
                    android:drawablePadding="8dp"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlOtp"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOtp"
                    android:hint="@string/otp"
                    android:inputType="numberPassword"
                    android:drawableStart="@drawable/baseline_lock_outline_24"
                    android:drawablePadding="8dp"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUpIn"
                android:text="@string/sign_up"
                style="@style/ThemeOverlay.Material3.FloatingActionButton.Primary"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvMember"
                    android:text="@string/already_a_member"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvSignUpIn"
                    android:text="@string/sign_in"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>